<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OrderApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_message">Welcome to Our Restaurant!</string>
    <string name="next">Next</string>
    <string name="title_activity_number_customers">NumberCustomers</string>
    <string name="input_number_customers">First, please input the number of your party</string>
    <string name="title_activity_split_bill">SplitBill</string>
    <string name="title_activity_view_menu">ViewMenu</string>
    <string name="table_info">You are sitting at table 19, your table can seat a maximum of 4 people.</string>
    <string name="error_numb_people">Sorry, please enter a number between 1 and 4 inclusive</string>
    <string name="close">Close</string>
    <string name="Ask_split_bill">Would you like to split your bill?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="orderGuestNumber">You are the only guest at this table, please place your order.</string>
    <string name="appetizer_line">Appetizer</string>
    <string name="dessert_line">Dessert</string>
    <string name="Main_Menu_line">Main Menu</string>
    <string name="Alcohol_line">Alcohol</string>
    <string name="Pops_line">Pops</string>
    <string name="title_activity_menu_selection">Menu_selection</string>
    <string name="title_activity_menu__qnt_selection">Menu_Qnt_selection</string>
    <string name="title_activity_menu_qnty_selection">MenuQntySelection</string>
    <string name="title_activity_menu__alcohol">Menu_Alcohol</string>
    <string name="title_activity_alcohol">Alcohol</string>
    <string name="Kokanee_line">Kokanee (bottle) $5.00</string>
    <string name="ChivasRegal_line">Chivas Regal (shot) $7.00</string>
    <string name="save_line">Save and Continue</string>
    <string name="Budweiser_line">Budweiser (bottle) $5.00</string>
    <string name="Ballantines_line">Ballantine\'s (shot) $6.00</string>
    <string name="ReviewAndCheckout_line">Review order and Check out</string>
    <string name="title_activity_review_page">ReviewPage</string>
    <string name="connection_line">connect</string>

    <!-- Strings for activity_connection.xml -->
    <string name="label_ip">IP:</string>
    <string name="playsong">Play Song</string>
    <string name="label_port">Port:</string>
    <string name="printsong">Print Song on Debug</string>
    <string name="connect">Connect</string>
    <string name="clear">Clear</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="label_myip">My IP:</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="refresh_socket">Show Sock.</string>
    <string name="ClientID">Client ID</string>
    <string name="title_activity_main_menu">Main_menu</string>
    <string name="hamburger">Hamburger $7.95</string>
    <string name="pizza">Pizza(slice) $2.50</string>
    <string name="fries">French Fries $3.50</string>
    <string name="sandwich">Sandwich $6.75</string>
    <string name="title_activity_appetizer">Appetizer</string>
    <string name="edamame">Edamame $3.50</string>
    <string name="salad">Salad $5.50</string>
    <string name="cheese">Cheese $4.50</string>
    <string name="shrimp">Shrimp(5) $4.00</string>
    <string name="title_activity_total_review">TotalReview</string>
    <string name="action_updateSpecials">Update Specials</string>
    <string name="Specials_line">Specials</string>
    <string name="title_activity_specials_page">Today\'s Specials</string>
    <string name="title_activity_waiting">Waiting</string>
    <string name="waiting">The chef has recieved your order, we will alert you when your order is almost done!</string>

</resources>