<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewMenu" >

    <TextView
        android:id="@+id/text111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderGuestNumber" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:onClick="onClickReviewAndCheckout"
        android:text="@string/ReviewAndCheckout_line" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text111"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:onClick="onClickAppetizer"
        android:text="@string/appetizer_line" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:onClick="onClickMainMenu"
        android:text="@string/Main_Menu_line" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:onClick="onClickAlcohol"
        android:text="@string/Alcohol_line" />

    <Button
        android:id="@+id/buttonSpecials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:onClick="onClickSpecials"
        android:text="@string/Specials_line" />

</RelativeLayout>